WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
151606
Object::{freeze, seal} perform preventExtensionsTransition twice
https://bugs.webkit.org/show_bug.cgi?id=151606
Summary
Object::{freeze, seal} perform preventExtensionsTransition twice
Yusuke Suzuki
Reported
2015-11-25 08:42:55 PST
Object::{freeze, seal} perform preventExtensionsTransition twice
Attachments
Patch
(3.97 KB, patch)
2015-11-25 08:43 PST
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2015-11-25 08:43:49 PST
Created
attachment 266166
[details]
Patch
WebKit Commit Bot
Comment 2
2015-11-30 21:15:57 PST
Comment on
attachment 266166
[details]
Patch Clearing flags on attachment: 266166 Committed
r192858
: <
http://trac.webkit.org/changeset/192858
>
WebKit Commit Bot
Comment 3
2015-11-30 21:16:00 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug