Object::{freeze, seal} perform preventExtensionsTransition twice https://bugs.webkit.org/show_bug.cgi?id=151606

Reviewed by Darin Adler.

In Structure::{freezeTransition, sealTransition}, we perform preventExtensionsTransition.
So it is unnecessary to perform preventExtensionsTransition before executing Structure::{freezeTransition, sealTransition}.

* runtime/JSObject.cpp:
(JSC::JSObject::seal):
(JSC::JSObject::freeze):
(JSC::JSObject::preventExtensions):
* tests/stress/freeze-and-seal-should-prevent-extensions.js: Added.
(shouldBe):
(shouldThrow):


Canonical link: https://commits.webkit.org/169815@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192858 268f45cc-cd09-0410-ab3c-d52691b4dbfc